Fix layout bug which occurred when resizing application window in image management

--- a/src/app/components/image/grid/image-grid.scss
+++ b/src/app/components/image/grid/image-grid.scss
@@ -15,6 +15,11 @@
     pointer-events: auto !important;
   }
 
+  .image-grid-row {
+    overflow: visible;
+    width: max-content;
+  }
+
   .cell {
     position: relative;
     user-select: none;
